outputs/logs/auto_preprocessor_20250930_222129.log
2025-09-30 22:21:30,433 - werkzeug - WARNING -  * Debugger is active!
2025-09-30 22:21:30,433 - werkzeug - INFO -  * Debugger PIN: 857-296-655
2025-09-30 22:28:34,729 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:34] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:37,956 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:37] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:38,395 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:38] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:38,621 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:38] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:38,823 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:38] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:39,025 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:39] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:39,223 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:39] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:39,396 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:39] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:39,569 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:39] "GET / HTTP/1.1" 200 -
2025-09-30 22:28:39,721 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:28:39] "GET / HTTP/1.1" 200 -
2025-09-30 22:29:01,036 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:29:01] "[32mPOST /upload HTTP/1.1[0m" 302 -
2025-09-30 22:29:01,043 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:29:01,055 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:29:01,056 - auto_preprocessor.data_analyzer - INFO - Using random sampling
2025-09-30 22:29:01,063 - auto_preprocessor.data_analyzer - INFO - Saved dataset sample to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/samples/sample_cleaned_titanic.csv
2025-09-30 22:29:01,063 - auto_preprocessor.data_analyzer - INFO - Computing dataset statistics
2025-09-30 22:29:01,110 - auto_preprocessor.data_analyzer - INFO - Saved statistics to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/processed/stats_cleaned_titanic.json
2025-09-30 22:29:01,116 - auto_preprocessor.data_analyzer - INFO - Requesting LLM analysis of dataset
2025-09-30 22:29:01,117 - auto_preprocessor.llm_client - INFO - Using cached LLM response
2025-09-30 22:29:01,117 - auto_preprocessor.data_analyzer - INFO - Saved LLM analysis report to /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/outputs/reports/analysis_cleaned_titanic_20250930_222901.json
2025-09-30 22:29:01,118 - auto_preprocessor.data_analyzer - INFO - Loading dataset from /home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/data/raw/cleaned_titanic.csv
2025-09-30 22:29:01,121 - auto_preprocessor.data_analyzer - INFO - Dataset loaded successfully: 891 rows, 12 columns
2025-09-30 22:29:01,143 - auto_preprocessor - ERROR - Error during analysis: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
Traceback (most recent call last):
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/app.py", line 132, in analyze_dataset
    return render_template('column_actions.html',
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/santosh/Desktop/Github Pull/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/santosh/Desktop/Github Pull/AURA-ML-Sandy-/AutoDataPreprocessor/templates/column_actions.html", line 225, in template
    {% endif %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endif'. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2025-09-30 22:29:01,144 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:29:01] "[32mGET /analyze HTTP/1.1[0m" 302 -
2025-09-30 22:29:01,150 - werkzeug - INFO - 127.0.0.1 - - [30/Sep/2025 22:29:01] "GET / HTTP/1.1" 200 -
